--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -1,17 +1,13 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+	<ion-slides [options]="swiperOpts">
+		<ion-slide>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+			<ion-button (click)="scan()" expand="full" fill="outline" shape="round" size="large">
+				ScanCode
+			</ion-button>
+
+		</ion-slide>
+	</ion-slides>
+
 </ion-content>
