--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -1,11 +1,26 @@
-<ion-header [translucent]="true">
+<ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-title>
       Historial
     </ion-title>
+
+    <ion-buttons slot="end">
+      <ion-button (click)="enviarCorreo()" color="primary">
+        <ion-icon slot="icon-only" name="send"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-list>
+    <ion-item *ngFor="let registro of dataLocalService.guardados" detail (click)="abrirRegistro(registro)">
+      <ion-icon color="primaryii" slot="start" [name]="registro.icon"></ion-icon>
+      <ion-label>
+        <h2> {{ registro.text }} </h2>
+        <p> {{ registro.created | date: 'medium' }} </p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
